src/core/Claroline/CoreBundle/Tests/Stub/plugin/extension/Invalid/UnloadableBundleClass5/InvalidUnloadableBundleClass5.php
<?php

namespace Invalid\UnloadableBundleClass5;

use Claroline\CoreBundle\Plugin\ClarolineExtension;

abstract class InvalidUnloadableBundleClass5 extends ClarolineExtension
{
    /**
     * Invalid because it cannot be instantiated
     */
}